
[project]
name = "dao-Bot"
version = "0.1.0"
description = ""
authors = [
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = [
    "nonebot-adapter-onebot>=2.2.3",
    "nonebot2[httpx,websockets]>=2.0.0",
    "aiohttp>=3.8.4",
    "nonebot-plugin-word-bank2>=0.1.8",
    "nonebot-plugin-heweather>=0.6.9",
    "nonebot-plugin-manager>=0.5.16",
    "wolframalpha>=5.0.0",
    "nonebot-plugin-withdraw>=0.2.3",
    "nonebot-plugin-setu-now>=0.6.2",
    "dnspython>=2.3.0",
    "nonebot-plugin-dailysign>=0.1.0.1",
    "python-dateutil>=2.8.2",
    "nonebot-adapter-kaiheila>=0.2.6",
    "nonebot-plugin-send-anything-anywhere>=0.2.7",
    "KaiheilaCardBuilder @ git+https://github.com/kexue-z/KaiheilaCardBuilder.git",
    "nonebot-plugin-apscheduler>=0.3.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {file = "LICENSE"}


[tool.pdm]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["plugins", "utils"]
extra_standard_library = ["typing_extensions"]
