[project]
name = "dao-bot"
version = "0.1.0"
description = "a bot"
authors = [{ name = "kexue", email = "x@kexue-cloud.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-bracket>=0.2.0",
    "nonebot-plugin-datastore>=1.3.0",
    "nonebot-plugin-heweather>=0.8.2",
    "nonebot-plugin-htmlrender>=0.4.0",
    "nonebot-plugin-manager>=0.5.16",
    "nonebot-plugin-mcsm>=0.2.1",
    "nonebot-plugin-setu-now>=0.6.5.1",
    "nonebot-plugin-tortoise-orm>=0.1.4",
    "nonebot-plugin-treehelp>=0.5.0",
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "toml>=0.10.2",
    "voluptuous>=0.15.2",
]


[tool.ruff]

[tool.ruff.lint]
exclude = ["plugins/_disabled"]
ignore = ["E402"]


[tool.nonebot]
